Fix for horizontal scrollbars

--- a/src/containers/WidgetList/WidgetList.scss
+++ b/src/containers/WidgetList/WidgetList.scss
@@ -4,6 +4,10 @@
 
 .WidgetList {
   margin: $space-small;
+
+  .container-fluid {
+    overflow: hidden;
+  }
 }
 
 @media (min-width: $screen-md-min) {
